# PMRV-main-main

./: .eslintrc.json  .gitignore  DEVELOPMENT.md  README.md  criar-repo.bat  index.html  package.json  push-main.bat  push-to-main.bat  pyproject.toml  referencias-grande-florianopolis-100m.xlsx  remove_bg.py  requirements.txt  service_worker.js  setup-github.bat  setup_github.py  test_refs.bat  ~$referencias-grande-florianopolis-100m.xlsx
.github/agents/: traffic-compliance-architect.agent.md
css/: inlined.css  style.css
data/: referencias_grande_florianopolis_300m.js
js/: calendarios.js  core.js  croqui.js  danos-report.js  danos.js  data-manager.js  envolvidos.js  gps.js  infracoes.js  patrulhamento.js  pesos.js  pmrv.js  referencias-proximas.js  relatorio.js  rodovias_ref.js  tacografo.js
scripts/: check_infracoes.py  copy-web-assets.mjs  fetch_tomtom_pois.py  generate-sw-manifest.mjs  generate_gps_data.py  generate_grande_floripa_refs.py  sanitize_b64.py  update_infracoes.py
